drop unimportant features for lgb

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,15 +1112,25 @@
     "        self.num_heads = num_heads\n",
     "        self.num_layers = num_layers\n",
     "        self.hidden_dim = hidden_dim\n",
+    "        self.dropout = dropout\n",
     "        \n",
     "        self.embedding = nn.Linear(input_dim, embed_dim)\n",
+    "        self.dropout = nn.Dropout(dropout)  # Dropout 추가\n",
     "        encoder_layer = nn.TransformerEncoderLayer(d_model=embed_dim, nhead=num_heads, dim_feedforward=hidden_dim, dropout=dropout)\n",
     "        self.transformer_encoder = nn.TransformerEncoder(encoder_layer, num_layers=num_layers)\n",
+    "        self.layer_norm = nn.LayerNorm(embed_dim)  # Layer Normalization 추가\n",
     "        self.fc = nn.Linear(embed_dim, output_dim)\n",
     "\n",
     "    def forward(self, x):\n",
+    "        # 입력 임베딩 및 드롭아웃 적용\n",
     "        x = self.embedding(x)\n",
+    "        x = self.dropout(x)\n",
+    "\n",
+    "        # Transformer 인코더와 Layer Normalization 적용\n",
     "        x = self.transformer_encoder(x)\n",
+    "        x = self.layer_norm(x)  # Normalization 추가\n",
+    "\n",
+    "        # 출력 레이어\n",
     "        x = self.fc(x)\n",
     "        return x\n",
     "\n",
@@ -1132,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1183,7 @@
     "                loss = criterion(outputs, y_batch)\n",
     "                val_loss += loss.item()\n",
     "        \n",
-    "        torch.save(model.state_dict(), model_path+f\"model_{epoch}_embed_dim={model.embed_dim}_num_heads={model.num_heads}_num_layers={model.num_layers}_hidden_dim={model.hidden_dim}.pt\")\n",
+    "        torch.save(model.state_dict(), model_path+f\"model_{epoch}_embed_dim={model.embed_dim}_num_heads={model.num_heads}_num_layers={model.num_layers}_hidden_dim={model.hidden_dim}_dropout={model.dropout}.pt\")\n",
     "\n",
     "        print(f\"Epoch {epoch+1}/{epochs}, Train Loss: {train_loss/len(train_loader):.4f}, Val Loss: {val_loss/len(val_loader):.4f}\")\n"
    ]
@@ -1187,10 +1197,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Epoch 1/10, Train Loss: 0.9233, Val Loss: 0.9171\n",
+      "Epoch 2/10, Train Loss: 0.9153, Val Loss: 0.9152\n",
+      "Epoch 3/10, Train Loss: 0.9141, Val Loss: 0.9151\n"
+     ]
+    }
+   ],
+   "source": [
+    "# target val loss is under 0.9124044109944525\n",
+    "# with dropout, layer normalization\n",
+    "train_model(model, train_loader, val_loader, criterion, optimizer, epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 1/10, Train Loss: 0.9210, Val Loss: 0.9170\n",
       "Epoch 2/10, Train Loss: 0.9148, Val Loss: 0.9145\n",
       "Epoch 3/10, Train Loss: 0.9137, Val Loss: 0.9146\n",
-      "Epoch 4/10, Train Loss: 0.9133, Val Loss: 0.9140\n"
+      "Epoch 4/10, Train Loss: 0.9133, Val Loss: 0.9140\n",
+      "Epoch 5/10, Train Loss: 0.9129, Val Loss: 0.9135\n",
+      "Epoch 6/10, Train Loss: 0.9127, Val Loss: 0.9134\n",
+      "Epoch 7/10, Train Loss: 0.9125, Val Loss: 0.9140\n",
+      "Epoch 8/10, Train Loss: 0.9124, Val Loss: 0.9137\n",
+      "Epoch 9/10, Train Loss: 0.9122, Val Loss: 0.9135\n",
+      "Epoch 10/10, Train Loss: 0.9121, Val Loss: 0.9135\n"
      ]
     }
    ],
@@ -1201,75 +1238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TransformerModel(\n",
-       "  (embedding): Linear(in_features=19, out_features=32, bias=True)\n",
-       "  (transformer_encoder): TransformerEncoder(\n",
-       "    (layers): ModuleList(\n",
-       "      (0-1): 2 x TransformerEncoderLayer(\n",
-       "        (self_attn): MultiheadAttention(\n",
-       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=32, out_features=32, bias=True)\n",
-       "        )\n",
-       "        (linear1): Linear(in_features=32, out_features=64, bias=True)\n",
-       "        (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        (linear2): Linear(in_features=64, out_features=32, bias=True)\n",
-       "        (norm1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
-       "        (norm2): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
-       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
-       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (fc): Linear(in_features=32, out_features=1, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "torch.save(model.state_dict(), 'model.pth')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m코드를 실행할 수 없습니다. 세션이 삭제되었습니다. 커널을 다시 시작해 보세요."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m코드를 실행할 수 없습니다. 세션이 삭제되었습니다. 커널을 다시 시작해 보세요. \n",
-      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
-     ]
-    }
-   ],
    "source": [
     "model.eval()\n",
     "predict = []\n",
@@ -1279,7 +1250,38 @@
     "        outputs = model(X_batch).detach().cpu().numpy()\n",
     "        predict.append(outputs)\n",
     "        \n",
-    "outputs = np.concatenate(predict)"
+    "outputs = np.concatenate(predict).reshape(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import root_mean_squared_log_error\n",
+    "y_pred = inverse_y(outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([612.74677, 896.30774, 970.8416 , ..., 898.1336 , 834.6991 ,\n",
+       "       833.2415 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
    ]
   },
   {
@@ -1288,16 +1290,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import root_mean_squared_log_error\n",
-    "y_pred = inverse_y(outputs)"
-   ]
   }
  ],
  "metadata": {
