--- a/reference/s4e12-simple-eda-cb-lgbm-xgb-meta.ipynb
+++ b/reference/s4e12-simple-eda-cb-lgbm-xgb-meta.ipynb
@@ -54,8 +54,8 @@
     "tags": []
    },
    "source": [
-    "| date | version| description |\r\n",
-    "| --- | --- | --- |\r\n",
+    "| date | version| description |\n",
+    "| --- | --- | --- |\n",
     "20124210 | 14 | only fill missing for categoricals. no encoding for categoricals. |n only fill missing for categoricals. no \n",
     "20241213 | 19 | add non-log as feature and adjusted training code to create the non-log dataset | |"
    ]
@@ -4200,7 +4200,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -4214,7 +4214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.5"
   },
   "papermill": {
    "default_parameters": {},
