module: custom loss function & metric

--- a/classify_then_regress.ipynb
+++ b/classify_then_regress.ipynb
@@ -40,6 +40,12 @@
     "from sklearn.mixture import GaussianMixture\n",
     "from sklearn.metrics import root_mean_squared_log_error, mean_squared_log_error, mean_squared_error, r2_score, accuracy_score\n",
     "\n",
+    "from custom_metrics import (\n",
+    "    lgb_lse_objective, lgb_lse_objective_with_inverse, lgb_rmsle, lgb_rmsle_with_inverse, \n",
+    "    xgb_rmsle_evaluation, xgb_rmsle_evaluation_with_inverse, xgb_sle_objective, xgb_sle_objective_with_inverse,\n",
+    "    RmsleMetric, SleObjective # for catboost rmsle\n",
+    ")\n",
+    "\n",
     "import logging\n",
     "logging.basicConfig(level=logging.ERROR)\n",
     "plt.rcParams['figure.figsize'] = [21, 9]\n",
@@ -550,222 +556,6 @@
     "    # y_val = inverse_y(y_val)\n",
     "    rmsle = mean_squared_log_error(y_val, y_pred) ** (1/2)\n",
     "    return r2, mse, rmsle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for lgboost\n",
-    "from typing import Tuple\n",
-    "\n",
-    "# for lgboost\n",
-    "def rmlse(preds, dtrain: np.ndarray):\n",
-    "    dtrain = np.log1p(dtrain)\n",
-    "    preds = np.log1p(preds)\n",
-    "    return 'RMLSE', np.sqrt(mean_squared_error(dtrain, preds)), False\n",
-    "\n",
-    "def rmlse_with_inverse(preds, dtrain: np.ndarray):\n",
-    "    dtrain = inverse_y(dtrain)\n",
-    "    preds = inverse_y(preds)\n",
-    "    \n",
-    "    dtrain = np.log1p(dtrain)\n",
-    "    preds = np.log1p(preds)\n",
-    "    return 'RMLSE', np.sqrt(mean_squared_error(dtrain, preds)), False\n",
-    "\n",
-    "# for catboost\n",
-    "class RMLSEMetricInv(object):\n",
-    "    @staticmethod\n",
-    "    def is_max_optimal():\n",
-    "        # RMLSE는 값이 작을수록 좋으므로 False 반환\n",
-    "        return False\n",
-    "\n",
-    "    def evaluate(self, approxes, target, weight=None):\n",
-    "        \"\"\"\n",
-    "        RMLSE 계산 함수.\n",
-    "        \n",
-    "        Args:\n",
-    "            approxes: 예측값의 리스트 (CatBoost에서 제공)\n",
-    "            target: 실제 타겟값\n",
-    "            weight: 가중치 (없을 수 있음, None 처리 필요)\n",
-    "        \n",
-    "        Returns:\n",
-    "            (error, weights sum)\n",
-    "        \"\"\"\n",
-    "        # 예측값 가져오기\n",
-    "        preds = np.array(approxes[0])  # approxes는 리스트로 제공됨\n",
-    "        target = np.array(target)\n",
-    "        \n",
-    "        # invesre transform\n",
-    "        preds = inverse_y(preds)\n",
-    "        target = inverse_y(target)\n",
-    "\n",
-    "        # 음수값 방지\n",
-    "        if np.any(target < 0) or np.any(preds < 0):\n",
-    "            raise ValueError(\"RMLSE cannot be calculated for negative values.\")\n",
-    "\n",
-    "        # 로그 변환\n",
-    "        preds = np.log1p(preds)\n",
-    "        target = np.log1p(target)\n",
-    "\n",
-    "        error_sum = 0.0\n",
-    "        # 가중치 처리\n",
-    "\n",
-    "        if weight is None:\n",
-    "            weight = np.ones(target.shape[0])\n",
-    "        \n",
-    "        error_sum = np.sum((weight * (preds - target) ** 2) * weight) / target.shape[0]\n",
-    "        weight_sum = np.sum(weight)\n",
-    "\n",
-    "        return error_sum, weight_sum\n",
-    "\n",
-    "    def get_final_error(self, error, weight):\n",
-    "        \"\"\"\n",
-    "        최종 에러 값 반환.\n",
-    "        \n",
-    "        Args:\n",
-    "            error: RMLSE 값\n",
-    "            weight: 가중치 합계\n",
-    "        \n",
-    "        Returns:\n",
-    "            최종 RMLSE 값\n",
-    "        \"\"\"\n",
-    "        return np.sqrt(error / (weight + 1e-38))  # RMLSE 자체를 최종 결과로 반환\n",
-    "    \n",
-    "class RMLSEMetric(object):\n",
-    "    @staticmethod\n",
-    "    def is_max_optimal():\n",
-    "        # RMLSE는 값이 작을수록 좋으므로 False 반환\n",
-    "        return False\n",
-    "\n",
-    "    def evaluate(self, approxes, target, weight=None):\n",
-    "        \"\"\"\n",
-    "        RMLSE 계산 함수.\n",
-    "        \n",
-    "        Args:\n",
-    "            approxes: 예측값의 리스트 (CatBoost에서 제공)\n",
-    "            target: 실제 타겟값\n",
-    "            weight: 가중치 (없을 수 있음, None 처리 필요)\n",
-    "        \n",
-    "        Returns:\n",
-    "            (error, weights sum)\n",
-    "        \"\"\"\n",
-    "        if weight is None:\n",
-    "            weight = np.ones(target.shape[0])\n",
-    "        # 예측값 가져오기\n",
-    "        preds = np.array(approxes[0])  # approxes는 리스트로 제공됨\n",
-    "        target = np.array(target)\n",
-    "\n",
-    "\n",
-    "        # 음수값 방지\n",
-    "        if np.any(target < 0) or np.any(preds < 0):\n",
-    "            return 1e6, np.sum(weight)\n",
-    "\n",
-    "        # 로그 변환\n",
-    "        preds = np.log1p(preds)\n",
-    "        target = np.log1p(target)\n",
-    "\n",
-    "        error_sum = 0.0\n",
-    "        # 가중치 처리\n",
-    "\n",
-    "        \n",
-    "        error_sum = np.sum((weight * (preds - target) ** 2) * weight) / target.shape[0]\n",
-    "        weight_sum = np.sum(weight)\n",
-    "\n",
-    "        return error_sum, weight_sum\n",
-    "\n",
-    "    def get_final_error(self, error, weight):\n",
-    "        \"\"\"\n",
-    "        최종 에러 값 반환.\n",
-    "        \n",
-    "        Args:\n",
-    "            error: RMLSE 값\n",
-    "            weight: 가중치 합계\n",
-    "        \n",
-    "        Returns:\n",
-    "            최종 RMLSE 값\n",
-    "        \"\"\"\n",
-    "        return np.sqrt(error / (weight + 1e-38))  # RMLSE 자체를 최종 결과로 반환\n",
-    "\n",
-    "# for xgboost\n",
-    "def rmlse_objective_with_inverse(labels, preds):\n",
-    "    y = inverse_y(labels)\n",
-    "    yhat = inverse_y(preds)\n",
-    "    eps = 1e-6 # + 1\n",
-    "    y = np.maximum(labels, eps)  # Ensure preds >= 0\n",
-    "    yhat = np.maximum(preds, eps)  # Ensure labels >= 0\n",
-    "    log1p_y = np.log1p(y)\n",
-    "    log1p_yhat = np.log1p(yhat)\n",
-    "\n",
-    "    diff = (log1p_yhat - log1p_y)\n",
-    "\n",
-    "    grad = diff / (yhat + 1.0)\n",
-    "    hess = (1 - diff) / np.power(yhat + 1.0, 2)\n",
-    "\n",
-    "    return grad, hess\n",
-    "\n",
-    "def rmlse_evaluation_with_inverse(labels, preds):\n",
-    "    y = inverse_y(labels)\n",
-    "    yhat = inverse_y(preds)\n",
-    "    n = y.shape[0]\n",
-    "    eps = 1e-6\n",
-    "    y = np.maximum(labels, eps)  # Ensure preds >= 0\n",
-    "    yhat = np.maximum(preds, eps)  # Ensure labels >= 0\n",
-    "    log1p_y = np.log1p(y)\n",
-    "    log1p_yhat = np.log1p(yhat)\n",
-    "    rmlse = np.sqrt(np.sum((log1p_yhat - log1p_y)**2)) / n\n",
-    "    return rmlse\n",
-    "\n",
-    "\n",
-    "def rmlse_objective(labels, preds):\n",
-    "    y = labels\n",
-    "    yhat = preds\n",
-    "    eps = 1e-6 + 1\n",
-    "    y = np.maximum(labels, eps)  # Ensure preds >= 0\n",
-    "    yhat = np.maximum(preds, eps)  # Ensure labels >= 0\n",
-    "    log1p_y = np.log1p(y)\n",
-    "    log1p_yhat = np.log1p(yhat)\n",
-    "\n",
-    "    diff = (log1p_yhat - log1p_y)\n",
-    "\n",
-    "    grad = diff / (yhat + 1.0)\n",
-    "    hess = (1 - diff) / np.power(yhat + 1.0, 2)\n",
-    "\n",
-    "    return grad, hess\n",
-    "\n",
-    "def rmlse_evaluation(labels, preds):\n",
-    "    y = labels\n",
-    "    yhat = preds\n",
-    "    n = y.shape[0]\n",
-    "    eps = 1e-6 + 1\n",
-    "    y = np.maximum(labels, eps)  # Ensure preds >= 0\n",
-    "    yhat = np.maximum(preds, eps)  # Ensure labels >= 0\n",
-    "    log1p_y = np.log1p(y)\n",
-    "    log1p_yhat = np.log1p(yhat)\n",
-    "    rmlse = np.sqrt(np.sum((log1p_yhat - log1p_y)**2)) / n\n",
-    "    return rmlse\n",
-    "\n",
-    "def gradient(labels: np.ndarray, preds: np.ndarray) -> np.ndarray:\n",
-    "    '''Compute the gradient squared log error.'''\n",
-    "    return (np.log1p(preds) - np.log1p(labels)) / (preds + 1)\n",
-    "\n",
-    "def hessian(labels: np.ndarray, preds: np.ndarray) -> np.ndarray:\n",
-    "    '''Compute the hessian for squared log error.'''\n",
-    "\n",
-    "    return ((-np.log1p(preds) + np.log1p(labels) + 1) /\n",
-    "            np.power(preds + 1, 2))\n",
-    "\n",
-    "def squared_log(labels: np.ndarray,\n",
-    "                preds: np.ndarray) -> Tuple[np.ndarray, np.ndarray]:\n",
-    "    '''Squared Log Error objective. A simplified version for RMSLE used as\n",
-    "    objective function.\n",
-    "    '''\n",
-    "    labels[labels < -1] = -1 + 1e-6\n",
-    "    grad = gradient(labels, preds)\n",
-    "    hess = hessian(labels, preds)\n",
-    "    return grad, hess"
    ]
   },
   {
@@ -8523,229 +8313,6 @@
    ],
    "source": [
     "inverse_y(stack_pred)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# RMLSE 평가 방식"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for lgboost\n",
-    "from typing import Tuple\n",
-    "\n",
-    "# for lgboost\n",
-    "def rmlse(preds, dtrain: np.ndarray):\n",
-    "    dtrain = np.log1p(dtrain)\n",
-    "    preds = np.log1p(preds)\n",
-    "    return 'RMLSE', np.sqrt(mean_squared_error(dtrain, preds)), False\n",
-    "\n",
-    "def rmlse_with_inverse(preds, dtrain: np.ndarray):\n",
-    "    dtrain = inverse_y(dtrain)\n",
-    "    preds = inverse_y(preds)\n",
-    "    \n",
-    "    dtrain = np.log1p(dtrain)\n",
-    "    preds = np.log1p(preds)\n",
-    "    return 'RMLSE', np.sqrt(mean_squared_error(dtrain, preds)), False\n",
-    "\n",
-    "# for catboost\n",
-    "class RMLSEMetricInv(object):\n",
-    "    @staticmethod\n",
-    "    def is_max_optimal():\n",
-    "        # RMLSE는 값이 작을수록 좋으므로 False 반환\n",
-    "        return False\n",
-    "\n",
-    "    def evaluate(self, approxes, target, weight=None):\n",
-    "        \"\"\"\n",
-    "        RMLSE 계산 함수.\n",
-    "        \n",
-    "        Args:\n",
-    "            approxes: 예측값의 리스트 (CatBoost에서 제공)\n",
-    "            target: 실제 타겟값\n",
-    "            weight: 가중치 (없을 수 있음, None 처리 필요)\n",
-    "        \n",
-    "        Returns:\n",
-    "            (error, weights sum)\n",
-    "        \"\"\"\n",
-    "        # 예측값 가져오기\n",
-    "        preds = np.array(approxes[0])  # approxes는 리스트로 제공됨\n",
-    "        target = np.array(target)\n",
-    "        \n",
-    "        # invesre transform\n",
-    "        preds = inverse_y(preds)\n",
-    "        target = inverse_y(target)\n",
-    "\n",
-    "        # 음수값 방지\n",
-    "        if np.any(target < 0) or np.any(preds < 0):\n",
-    "            raise ValueError(\"RMLSE cannot be calculated for negative values.\")\n",
-    "\n",
-    "        # 로그 변환\n",
-    "        preds = np.log1p(preds)\n",
-    "        target = np.log1p(target)\n",
-    "\n",
-    "        error_sum = 0.0\n",
-    "        # 가중치 처리\n",
-    "\n",
-    "        if weight is None:\n",
-    "            weight = np.ones(target.shape[0])\n",
-    "        \n",
-    "        error_sum = np.sum((weight * (preds - target) ** 2) * weight) / target.shape[0]\n",
-    "        weight_sum = np.sum(weight)\n",
-    "\n",
-    "        return error_sum, weight_sum\n",
-    "\n",
-    "    def get_final_error(self, error, weight):\n",
-    "        \"\"\"\n",
-    "        최종 에러 값 반환.\n",
-    "        \n",
-    "        Args:\n",
-    "            error: RMLSE 값\n",
-    "            weight: 가중치 합계\n",
-    "        \n",
-    "        Returns:\n",
-    "            최종 RMLSE 값\n",
-    "        \"\"\"\n",
-    "        return np.sqrt(error / (weight + 1e-38))  # RMLSE 자체를 최종 결과로 반환\n",
-    "    \n",
-    "class RMLSEMetric(object):\n",
-    "    @staticmethod\n",
-    "    def is_max_optimal():\n",
-    "        # RMLSE는 값이 작을수록 좋으므로 False 반환\n",
-    "        return False\n",
-    "\n",
-    "    def evaluate(self, approxes, target, weight=None):\n",
-    "        \"\"\"\n",
-    "        RMLSE 계산 함수.\n",
-    "        \n",
-    "        Args:\n",
-    "            approxes: 예측값의 리스트 (CatBoost에서 제공)\n",
-    "            target: 실제 타겟값\n",
-    "            weight: 가중치 (없을 수 있음, None 처리 필요)\n",
-    "        \n",
-    "        Returns:\n",
-    "            (error, weights sum)\n",
-    "        \"\"\"\n",
-    "        if weight is None:\n",
-    "            weight = np.ones(target.shape[0])\n",
-    "        # 예측값 가져오기\n",
-    "        preds = np.array(approxes[0])  # approxes는 리스트로 제공됨\n",
-    "        target = np.array(target)\n",
-    "\n",
-    "\n",
-    "        # 음수값 방지\n",
-    "        if np.any(target < 0) or np.any(preds < 0):\n",
-    "            return 1e6, np.sum(weight)\n",
-    "\n",
-    "        # 로그 변환\n",
-    "        preds = np.log1p(preds)\n",
-    "        target = np.log1p(target)\n",
-    "\n",
-    "        error_sum = 0.0\n",
-    "        # 가중치 처리\n",
-    "\n",
-    "        \n",
-    "        error_sum = np.sum((weight * (preds - target) ** 2) * weight) / target.shape[0]\n",
-    "        weight_sum = np.sum(weight)\n",
-    "\n",
-    "        return error_sum, weight_sum\n",
-    "\n",
-    "    def get_final_error(self, error, weight):\n",
-    "        \"\"\"\n",
-    "        최종 에러 값 반환.\n",
-    "        \n",
-    "        Args:\n",
-    "            error: RMLSE 값\n",
-    "            weight: 가중치 합계\n",
-    "        \n",
-    "        Returns:\n",
-    "            최종 RMLSE 값\n",
-    "        \"\"\"\n",
-    "        return np.sqrt(error / (weight + 1e-38))  # RMLSE 자체를 최종 결과로 반환\n",
-    "\n",
-    "# for xgboost\n",
-    "def rmlse_objective_with_inverse(labels, preds):\n",
-    "    y = inverse_y(labels)\n",
-    "    yhat = inverse_y(preds)\n",
-    "    eps = 1e-6 # + 1\n",
-    "    y = np.maximum(labels, eps)  # Ensure preds >= 0\n",
-    "    yhat = np.maximum(preds, eps)  # Ensure labels >= 0\n",
-    "    log1p_y = np.log1p(y)\n",
-    "    log1p_yhat = np.log1p(yhat)\n",
-    "\n",
-    "    diff = (log1p_yhat - log1p_y)\n",
-    "\n",
-    "    grad = diff / (yhat + 1.0)\n",
-    "    hess = (1 - diff) / np.power(yhat + 1.0, 2)\n",
-    "\n",
-    "    return grad, hess\n",
-    "\n",
-    "def rmlse_evaluation_with_inverse(labels, preds):\n",
-    "    y = inverse_y(labels)\n",
-    "    yhat = inverse_y(preds)\n",
-    "    n = y.shape[0]\n",
-    "    eps = 1e-6\n",
-    "    y = np.maximum(labels, eps)  # Ensure preds >= 0\n",
-    "    yhat = np.maximum(preds, eps)  # Ensure labels >= 0\n",
-    "    log1p_y = np.log1p(y)\n",
-    "    log1p_yhat = np.log1p(yhat)\n",
-    "    rmlse = np.sqrt(np.sum((log1p_yhat - log1p_y)**2)) / n\n",
-    "    return rmlse\n",
-    "\n",
-    "\n",
-    "def rmlse_objective(labels, preds):\n",
-    "    y = labels\n",
-    "    yhat = preds\n",
-    "    eps = 1e-6 + 1\n",
-    "    y = np.maximum(labels, eps)  # Ensure preds >= 0\n",
-    "    yhat = np.maximum(preds, eps)  # Ensure labels >= 0\n",
-    "    log1p_y = np.log1p(y)\n",
-    "    log1p_yhat = np.log1p(yhat)\n",
-    "\n",
-    "    diff = (log1p_yhat - log1p_y)\n",
-    "\n",
-    "    grad = diff / (yhat + 1.0)\n",
-    "    hess = (1 - diff) / np.power(yhat + 1.0, 2)\n",
-    "\n",
-    "    return grad, hess\n",
-    "\n",
-    "def rmlse_evaluation(labels, preds):\n",
-    "    y = labels\n",
-    "    yhat = preds\n",
-    "    n = y.shape[0]\n",
-    "    eps = 1e-6 + 1\n",
-    "    y = np.maximum(labels, eps)  # Ensure preds >= 0\n",
-    "    yhat = np.maximum(preds, eps)  # Ensure labels >= 0\n",
-    "    log1p_y = np.log1p(y)\n",
-    "    log1p_yhat = np.log1p(yhat)\n",
-    "    rmlse = np.sqrt(np.sum((log1p_yhat - log1p_y)**2)) / n\n",
-    "    return rmlse\n",
-    "\n",
-    "def gradient(labels: np.ndarray, preds: np.ndarray) -> np.ndarray:\n",
-    "    '''Compute the gradient squared log error.'''\n",
-    "    return (np.log1p(preds) - np.log1p(labels)) / (preds + 1)\n",
-    "\n",
-    "def hessian(labels: np.ndarray, preds: np.ndarray) -> np.ndarray:\n",
-    "    '''Compute the hessian for squared log error.'''\n",
-    "\n",
-    "    return ((-np.log1p(preds) + np.log1p(labels) + 1) /\n",
-    "            np.power(preds + 1, 2))\n",
-    "\n",
-    "def squared_log(labels: np.ndarray,\n",
-    "                preds: np.ndarray) -> Tuple[np.ndarray, np.ndarray]:\n",
-    "    '''Squared Log Error objective. A simplified version for RMSLE used as\n",
-    "    objective function.\n",
-    "    '''\n",
-    "    labels[labels < -1] = -1 + 1e-6\n",
-    "    grad = gradient(labels, preds)\n",
-    "    hess = hessian(labels, preds)\n",
-    "    return grad, hess"
    ]
   },
   {
