--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -331,7 +331,7 @@
     "def inverse_y_torch(y):\n",
     "    return torch.expm1(y_scaler_torch.inverse_transform(y)).squeeze(-1)\n",
     "\n",
-    "def rmlse(preds, dtrain: np.ndarray):\n",
+    "def rmsle(preds, dtrain: np.ndarray):\n",
     "    dtrain = inverse_y(dtrain)\n",
     "    preds = inverse_y(preds)\n",
     "    \n",
@@ -415,7 +415,7 @@
     "        gpu_id=0,\n",
     "        device_type='gpu',           \n",
     "    )\n",
-    "    lgbr.fit(X_train, y_train, eval_set=[(X_val, y_val)], eval_metric=rmlse,) # use custom rmlse loss function\n",
+    "    lgbr.fit(X_train, y_train, eval_set=[(X_val, y_val)], eval_metric=rmsle,) # use custom rmlse loss function\n",
     "    print(evaluate_model(lgbr, X_val, y_val))\n",
     "    if not SPLIT:\n",
     "        lgb_predictions[val_idx] = lgbr.predict(X_val)\n",
