final commit before due

--- a/reference/rid-catboost-nonlog_minimize_date.ipynb
+++ b/reference/rid-catboost-nonlog_minimize_date.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "fa3b6b66",
    "metadata": {
     "execution": {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "dc4257b8",
    "metadata": {
     "execution": {
@@ -60,14 +60,17 @@
     "test = pd.read_csv(\"../kaggle/input/playground-series-s4e12/test.csv\")\n",
     "\n",
     "sample = pd.read_csv('../kaggle/input/playground-series-s4e12/sample_submission.csv')\n",
+    "original = pd.read_csv('../kaggle/input/Insurance Premium Prediction Dataset.csv')\n",
     "\n",
     "train.drop('id', axis=1, inplace=True)\n",
-    "test.drop('id', axis=1, inplace=True) "
+    "test.drop('id', axis=1, inplace=True) \n",
+    "original = original[train.columns]\n",
+    "original.drop('Premium Amount', axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "ffb13a7b",
    "metadata": {
     "execution": {
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "7a6ea394",
    "metadata": {
     "execution": {
@@ -119,7 +122,7 @@
    "source": [
     "train = date(train)\n",
     "test = date(test)\n",
-    "\n",
+    "original = date(original)\n",
     "# cat_c = [col for col in train.columns if train[col].dtype == 'object']\n",
     "\n",
     "# def update(df):\n",
@@ -136,12 +139,13 @@
     "columns_to_convert = train.columns.difference(['Premium Amount'])\n",
     "\n",
     "train[columns_to_convert] = train[columns_to_convert].fillna('None').astype('string')\n",
-    "test[columns_to_convert] = test[columns_to_convert].fillna('None').astype('string')"
+    "test[columns_to_convert] = test[columns_to_convert].fillna('None').astype('string')\n",
+    "original[columns_to_convert] = original[columns_to_convert].fillna('None').astype('string')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "194cb46f",
    "metadata": {
     "execution": {
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "17a8c8e8",
    "metadata": {},
    "outputs": [
@@ -183,7 +187,7 @@
        "       'Exercise Frequency', 'Property Type'], dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "12ce1489",
    "metadata": {
     "execution": {
@@ -220,7 +224,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
+   "id": "c1a3fe67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                     0\n",
+       "Gender                  0\n",
+       "Annual Income           0\n",
+       "Marital Status          0\n",
+       "Number of Dependents    0\n",
+       "Education Level         0\n",
+       "Occupation              0\n",
+       "Health Score            0\n",
+       "Location                0\n",
+       "Policy Type             0\n",
+       "Previous Claims         0\n",
+       "Vehicle Age             0\n",
+       "Credit Score            0\n",
+       "Insurance Duration      0\n",
+       "Policy Start Date       0\n",
+       "Customer Feedback       0\n",
+       "Smoking Status          0\n",
+       "Exercise Frequency      0\n",
+       "Property Type           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "ac7e1bc6",
    "metadata": {
     "execution": {
@@ -243,6 +287,7 @@
     "def train():\n",
     "    kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "    oof = np.zeros(len(X))\n",
+    "    original_preds = np.zeros((len(original), 5))\n",
     "    models = []\n",
     "\n",
     "    for fold, (train_idx, valid_idx) in enumerate(kf.split(X)):\n",
@@ -271,14 +316,15 @@
     "        models.append(model)\n",
     "        oof[valid_idx] = np.maximum(0, model.predict(X_valid))\n",
     "        fold_rmsle = rmsle(y_valid, oof[valid_idx])\n",
+    "        original_preds[:, fold] = np.maximum(0, model.predict(original))\n",
     "        print(f\"Fold {fold + 1} RMSLE: {fold_rmsle}\")\n",
     "        \n",
-    "    return models, oof"
+    "    return models, oof, original_preds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "5d1630f7",
    "metadata": {
     "execution": {
@@ -302,73 +348,86 @@
      "output_type": "stream",
      "text": [
       "Fold 1\n",
-      "0:\tlearn: 862.9632891\ttest: 861.8774521\tbest: 861.8774521 (0)\ttotal: 985ms\tremaining: 16m 24s\n",
-      "200:\tlearn: 843.7475464\ttest: 839.3776285\tbest: 839.3776285 (200)\ttotal: 2m 12s\tremaining: 8m 47s\n",
-      "400:\tlearn: 842.4609234\ttest: 838.9218935\tbest: 838.9216494 (385)\ttotal: 2m 57s\tremaining: 4m 25s\n",
-      "600:\tlearn: 841.4409178\ttest: 838.7489554\tbest: 838.7476531 (576)\ttotal: 3m 33s\tremaining: 2m 21s\n",
-      "800:\tlearn: 840.4700755\ttest: 838.6411460\tbest: 838.6332907 (710)\ttotal: 4m 42s\tremaining: 1m 10s\n",
-      "999:\tlearn: 839.6094686\ttest: 838.6178648\tbest: 838.6146901 (996)\ttotal: 6m 12s\tremaining: 0us\n",
-      "bestTest = 838.6146901\n",
+      "0:\tlearn: 862.9632891\ttest: 861.8774521\tbest: 861.8774521 (0)\ttotal: 79.2ms\tremaining: 1m 19s\n",
+      "200:\tlearn: 843.7475464\ttest: 839.3776285\tbest: 839.3776285 (200)\ttotal: 17.1s\tremaining: 1m 8s\n",
+      "400:\tlearn: 842.5148083\ttest: 838.9211205\tbest: 838.9211205 (400)\ttotal: 37.8s\tremaining: 56.5s\n",
+      "600:\tlearn: 841.4715441\ttest: 838.7599431\tbest: 838.7562805 (570)\ttotal: 59.2s\tremaining: 39.3s\n",
+      "800:\tlearn: 840.5079252\ttest: 838.6329244\tbest: 838.6249062 (773)\ttotal: 1m 18s\tremaining: 19.6s\n",
+      "999:\tlearn: 839.6006873\ttest: 838.6039040\tbest: 838.6025608 (944)\ttotal: 1m 38s\tremaining: 0us\n",
+      "bestTest = 838.6025608\n",
+      "bestIteration = 944\n",
+      "Shrink model to first 945 iterations.\n",
+      "Fold 1 RMSLE: 1.1429401744870396\n",
+      "Fold 2\n",
+      "0:\tlearn: 863.2659796\ttest: 861.1944970\tbest: 861.1944970 (0)\ttotal: 83.7ms\tremaining: 1m 23s\n",
+      "200:\tlearn: 844.0976070\ttest: 838.2295196\tbest: 838.2287866 (199)\ttotal: 17.9s\tremaining: 1m 11s\n",
+      "400:\tlearn: 842.7794827\ttest: 837.6406536\tbest: 837.6384124 (389)\ttotal: 37s\tremaining: 55.3s\n",
+      "600:\tlearn: 841.7117695\ttest: 837.4086760\tbest: 837.4086760 (600)\ttotal: 56.1s\tremaining: 37.2s\n",
+      "800:\tlearn: 840.7763574\ttest: 837.2286983\tbest: 837.2269045 (773)\ttotal: 1m 15s\tremaining: 18.8s\n",
+      "999:\tlearn: 839.8932250\ttest: 837.1532307\tbest: 837.1506620 (996)\ttotal: 1m 35s\tremaining: 0us\n",
+      "bestTest = 837.150662\n",
       "bestIteration = 996\n",
       "Shrink model to first 997 iterations.\n",
-      "Fold 1 RMSLE: 1.1426610379028328\n",
-      "Fold 2\n",
-      "0:\tlearn: 863.2659796\ttest: 861.1944970\tbest: 861.1944970 (0)\ttotal: 93ms\tremaining: 1m 32s\n",
-      "200:\tlearn: 844.0976070\ttest: 838.2295196\tbest: 838.2287866 (199)\ttotal: 17.3s\tremaining: 1m 8s\n",
-      "400:\tlearn: 842.7794827\ttest: 837.6406536\tbest: 837.6384124 (389)\ttotal: 35.8s\tremaining: 53.4s\n",
-      "600:\tlearn: 841.7373171\ttest: 837.4390014\tbest: 837.4390014 (600)\ttotal: 54.5s\tremaining: 36.2s\n",
-      "800:\tlearn: 840.7704302\ttest: 837.2746442\tbest: 837.2746442 (798)\ttotal: 1m 14s\tremaining: 18.5s\n",
-      "999:\tlearn: 839.8512021\ttest: 837.2035432\tbest: 837.1957968 (979)\ttotal: 1m 34s\tremaining: 0us\n",
-      "bestTest = 837.1957968\n",
-      "bestIteration = 979\n",
-      "Shrink model to first 980 iterations.\n",
-      "Fold 2 RMSLE: 1.141923615435428\n",
+      "Fold 2 RMSLE: 1.1414602261079385\n",
       "Fold 3\n",
-      "0:\tlearn: 862.6007039\ttest: 864.1917812\tbest: 864.1917812 (0)\ttotal: 125ms\tremaining: 2m 5s\n",
-      "200:\tlearn: 843.1314836\ttest: 841.8493522\tbest: 841.8493522 (200)\ttotal: 1m 32s\tremaining: 6m 6s\n",
-      "400:\tlearn: 841.9079386\ttest: 841.3704123\tbest: 841.3703311 (399)\ttotal: 2m 16s\tremaining: 3m 24s\n",
-      "600:\tlearn: 840.8421226\ttest: 841.1180775\tbest: 841.1155615 (588)\ttotal: 3m 42s\tremaining: 2m 27s\n",
-      "800:\tlearn: 839.9320760\ttest: 841.0193383\tbest: 841.0084207 (778)\ttotal: 4m 53s\tremaining: 1m 12s\n",
-      "999:\tlearn: 839.0393084\ttest: 840.9345506\tbest: 840.9345506 (999)\ttotal: 5m 49s\tremaining: 0us\n",
-      "bestTest = 840.9345506\n",
+      "0:\tlearn: 862.6007039\ttest: 864.1917812\tbest: 864.1917812 (0)\ttotal: 101ms\tremaining: 1m 40s\n",
+      "200:\tlearn: 843.1237916\ttest: 841.8424999\tbest: 841.8424999 (200)\ttotal: 18.5s\tremaining: 1m 13s\n",
+      "400:\tlearn: 841.8510956\ttest: 841.3410806\tbest: 841.3410400 (396)\ttotal: 37.3s\tremaining: 55.8s\n",
+      "600:\tlearn: 840.8988309\ttest: 841.1124773\tbest: 841.1124773 (600)\ttotal: 56.5s\tremaining: 37.5s\n",
+      "800:\tlearn: 839.9903492\ttest: 840.9948648\tbest: 840.9930790 (790)\ttotal: 1m 16s\tremaining: 19s\n",
+      "999:\tlearn: 839.0914604\ttest: 840.9229013\tbest: 840.9229013 (999)\ttotal: 1m 35s\tremaining: 0us\n",
+      "bestTest = 840.9229013\n",
       "bestIteration = 999\n",
-      "Fold 3 RMSLE: 1.1390462666574788\n",
+      "Fold 3 RMSLE: 1.1395228679903553\n",
       "Fold 4\n",
-      "0:\tlearn: 862.8884109\ttest: 862.1305603\tbest: 862.1305603 (0)\ttotal: 104ms\tremaining: 1m 44s\n",
-      "200:\tlearn: 843.8693864\ttest: 839.1475954\tbest: 839.1475954 (200)\ttotal: 18.6s\tremaining: 1m 13s\n",
-      "400:\tlearn: 842.6188408\ttest: 838.6428961\tbest: 838.6428961 (400)\ttotal: 38.9s\tremaining: 58.1s\n",
-      "600:\tlearn: 841.4947868\ttest: 838.3063561\tbest: 838.3027323 (598)\ttotal: 59.2s\tremaining: 39.3s\n",
-      "800:\tlearn: 840.5354179\ttest: 838.1287704\tbest: 838.1287704 (800)\ttotal: 1m 19s\tremaining: 19.8s\n",
-      "999:\tlearn: 839.6047527\ttest: 838.0872292\tbest: 838.0869441 (998)\ttotal: 1m 39s\tremaining: 0us\n",
-      "bestTest = 838.0869441\n",
+      "0:\tlearn: 862.8884109\ttest: 862.1305603\tbest: 862.1305603 (0)\ttotal: 84.6ms\tremaining: 1m 24s\n",
+      "200:\tlearn: 843.8693864\ttest: 839.1475954\tbest: 839.1475954 (200)\ttotal: 17.7s\tremaining: 1m 10s\n",
+      "400:\tlearn: 842.6419709\ttest: 838.6201034\tbest: 838.6198185 (379)\ttotal: 37.2s\tremaining: 55.6s\n",
+      "600:\tlearn: 841.5486524\ttest: 838.2992306\tbest: 838.2992306 (600)\ttotal: 56.8s\tremaining: 37.7s\n",
+      "800:\tlearn: 840.6182157\ttest: 838.1639159\tbest: 838.1624905 (798)\ttotal: 1m 16s\tremaining: 19s\n",
+      "999:\tlearn: 839.7335349\ttest: 838.0812829\tbest: 838.0812015 (998)\ttotal: 1m 35s\tremaining: 0us\n",
+      "bestTest = 838.0812015\n",
       "bestIteration = 998\n",
       "Shrink model to first 999 iterations.\n",
-      "Fold 4 RMSLE: 1.1419282519556841\n",
+      "Fold 4 RMSLE: 1.1422809294069838\n",
       "Fold 5\n",
-      "0:\tlearn: 862.8920105\ttest: 863.1047609\tbest: 863.1047609 (0)\ttotal: 79.9ms\tremaining: 1m 19s\n",
-      "200:\tlearn: 843.7905484\ttest: 840.2431445\tbest: 840.2405852 (198)\ttotal: 18.7s\tremaining: 1m 14s\n",
-      "400:\tlearn: 842.4345064\ttest: 839.6808130\tbest: 839.6805285 (399)\ttotal: 40.4s\tremaining: 1m\n",
-      "600:\tlearn: 841.4298434\ttest: 839.5000214\tbest: 839.5000214 (600)\ttotal: 1m\tremaining: 40.2s\n",
-      "800:\tlearn: 840.4837617\ttest: 839.3510738\tbest: 839.3487151 (786)\ttotal: 1m 20s\tremaining: 20s\n",
-      "999:\tlearn: 839.5665370\ttest: 839.2486290\tbest: 839.2480596 (994)\ttotal: 1m 41s\tremaining: 0us\n",
-      "bestTest = 839.2480596\n",
-      "bestIteration = 994\n",
-      "Shrink model to first 995 iterations.\n",
-      "Fold 5 RMSLE: 1.1430828028382176\n"
+      "0:\tlearn: 862.8920105\ttest: 863.1047609\tbest: 863.1047609 (0)\ttotal: 81.4ms\tremaining: 1m 21s\n",
+      "200:\tlearn: 843.7905484\ttest: 840.2431445\tbest: 840.2405852 (198)\ttotal: 18.4s\tremaining: 1m 13s\n",
+      "400:\tlearn: 842.4345064\ttest: 839.6808130\tbest: 839.6805285 (399)\ttotal: 37.7s\tremaining: 56.3s\n",
+      "600:\tlearn: 841.4341028\ttest: 839.5018510\tbest: 839.5018510 (600)\ttotal: 57.4s\tremaining: 38.1s\n",
+      "800:\tlearn: 840.5296514\ttest: 839.3731553\tbest: 839.3730740 (792)\ttotal: 1m 17s\tremaining: 19.2s\n",
+      "999:\tlearn: 839.6351208\ttest: 839.2778305\tbest: 839.2768951 (998)\ttotal: 1m 36s\tremaining: 0us\n",
+      "bestTest = 839.2768951\n",
+      "bestIteration = 998\n",
+      "Shrink model to first 999 iterations.\n",
+      "Fold 5 RMSLE: 1.1428251760343788\n"
      ]
     }
    ],
    "source": [
-    "models,oof = train()"
+    "models,oof, original_preds = train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e56cfdb2",
+   "execution_count": 26,
+   "id": "d7b78913",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['non_log_original_preds.pkl']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(original_preds, 'non_log_original_preds.pkl')"
+   ]
   },
   {
    "cell_type": "code",
